tests/neg/i14660.scala
class Bar:
  private opaque type Baz = Int // error
